# django-cash-flow-manager

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: ci.yml
django_cash_flow_manager/: asgi.py  settings.py  urls.py  wsgi.py
django_cash_flow_manager/cashflows/: admin.py  apps.py  models.py  rules.py  urls.py
django_cash_flow_manager/cashflows/api/: __init__.py  serializers.py  urls.py  views.py
django_cash_flow_manager/cashflows/catalogs/: urls.py  views.py
django_cash_flow_manager/cashflows/catalogs/categories/: forms.py  views.py
django_cash_flow_manager/cashflows/catalogs/statuses/: forms.py  views.py
django_cash_flow_manager/cashflows/catalogs/subcategories/: forms.py  views.py
django_cash_flow_manager/cashflows/catalogs/types/: forms.py  views.py
django_cash_flow_manager/cashflows/migrations/: 0001_initial.py  0002_rename_record_to_transaction.py
django_cash_flow_manager/cashflows/transactions/: forms.py  selectors.py  urls.py  views.py
django_cash_flow_manager/devtools/: apps.py
django_cash_flow_manager/devtools/management/commands/: load_mock_data.py
static/css/: app.css
static/js/: dependent-selects.js
templates/: base.html
templates/cashflows/: catalog_confirm_delete.html  catalog_form.html  catalogs.html  confirm_delete.html  transaction_form.html  transaction_list.html
tests/: test_api_viewsets.py  test_cashflow_forms.py  test_catalog_view_helpers.py  test_database_settings.py  test_html_viewsets.py  test_mock_data_command.py  test_request_params.py
tests_functional/: test_admin_entrypoint.py  test_cashflow_ui.py
